Fixed tooltip not showing
By adding a hover-catcher div on top of the button
Because of event bubbling, the button can still be clicked (or not... to be fixed)
Also:
 - added more descriptions

--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,7 @@ body {
   z-index: 99;
 }
 #btn-bar button {
+  position: relative;
   background-image: url('../img/sprite/button.png');
   border: 0;
   width: 32px;
@@ -140,6 +141,16 @@ body {
   text-shadow: none;
   background-color: transparent;
   outline: 0;
+}
+#btn-bar .hover-catcher {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 #btn-laser-tower {
   background-position: 0 0;
@@ -287,10 +298,4 @@ body {
 }
 .title-danger {
   color: #ff4d4d;
-}
-
-
-#how-to-play{
-  color:white;
-  padding:20px;
 }
